--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 media_folder: 'assets/images'
-public_folder: ''
+public_folder: 'assets/images'
 collections:
   - name: 'blog'
     label: 'Blog'
